[tool.poetry]
name = "Publ"
version = "0.7.22"
description = "A flexible web-based publishing framework"
authors = ["fluffy <fluffy@beesbuzz.biz>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/PlaidWeb/Publ"
homepage = "https://publ.plaidweb.site/"

[tool.poetry.dependencies]
python = "^3.8.1"
authl = { version = "^0.7.0", optional = true }
misaka = "^2.1.1"
arrow = "^0.17.0"
atomicwrites = "^1.4.0"
awesome-slugify = "^1.6.5"
Flask = "^2.3.2"
Flask-Caching = "^1.9.0"
pony = "^0.7.14"
Pygments = "^2.12.0"
watchdog = "^1.0.2"
Whoosh = { version = "^2.7.4", optional = true }
Pillow = "^9.0.0"
pillow = "^9.3.0"
flask = "^2.2.2"

[tool.poetry.extras]
auth = ["authl"]
search = ["Whoosh"]


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"
coverage = "^7.2.1"
flake8 = "^6.0.0"
mypy = "^1.1.1"
pylint = "^2.16.4"
pytest = "^7.2.2"
isort = "^5.12.0"
pytest-mock = "^3.10.0"
requests-mock = "^1.10.0"
types-python-dateutil = "^2.8.19.10"
types-requests = "^2.28.11.15"
types-python-slugify = "^8.0.0.1"
types-atomicwrites = "^1.4.5.1"
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
