[tool.poetry]
name = "Publ"
version = "0.7.35"
description = "A flexible web-based publishing framework"
authors = ["fluffy <fluffy@beesbuzz.biz>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/PlaidWeb/Publ"
homepage = "https://publ.plaidweb.site/"
include = [
    "bandcrash/__version__.py"
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
authl = { version = "^0.7.0", optional = true }
misaka = "^2.1.1"
arrow = "^1.2.3"
atomicwrites = "^1.4.1"
awesome-slugify = "^1.6.5"
Flask = "^2.3.2"
Flask-Caching = "^2.0.2"
pony = "^0.7.16"
Pygments = "^2.15.1"
whoosh-reloaded = { version = "^2.7.4", optional = true }
watchdog = "*"
pillow = "^10.3.0"
requests = "^2.31.0"

[tool.poetry.extras]
auth = ["authl"]
search = ["whoosh-reloaded"]


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"
coverage = "^7.2.5"
flake8 = "^6.0.0"
mypy = "^1.2.0"
pytest = "^7.3.1"
isort = "^5.12.0"
pytest-mock = "^3.10.0"
requests-mock = "^1.10.0"
types-python-dateutil = "^2.8.19.12"
types-requests = "^2.29.0.0"
types-python-slugify = "^8.0.0.2"
types-atomicwrites = "^1.4.5.1"
gunicorn = "^22.0.0"
pylint = "^3.3.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
